--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +15,127 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+    <div class="flex container-vh">
+        <div class="col col-nav">  
+            <div>
+                <h1><i class="fa-brands fa-spotify"></i>Spotify</h1>
+            </div>
+            <div>
+                <nav>
+                    <ul class="list icon ">
+                        <li><i class="fa-brands fa-spotify"></i><span>Home</span></li>
+                        <li><i class="fa-brands fa-spotify"></i><span>Cerca</span></li>
+                        <li><i class="fa-brands fa-spotify"></i><span>La tua libreria</span></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="playlist">
+                <nav>
+                    <ul>
+                        <h5>Playlist</h5>
+                        <li><i class="fa-brands fa-spotify"></i>Crea Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li> 
+                    </ul>
+                </nav>
+            </div>
+            <div class="bottom-nav">
+                <div>
+                    <p><i class="fa-regular fa-circle-arrow-down"></i><span>Installa app</span></p>
+                    <hr>
+                    <p><i class="fa-duotone fa-circle-user"></i><span>John Doe</span></p>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-main">
+            <div class="upgrade flex">
+                <div>
+                    <button>EFFETTUA L'UPGRADE</button>
+                </div>
+            </div>
+            <div class="first-section">
+                <div>
+                    <nav>
+                        <ul class="row">
+                            <li>IN EVIDENZA</li>
+                            <li>PODCAST</li>
+                            <li>CLASSIFICHE</li>
+                            <li>GENERI E MOOD</li>
+                            <li>NUOVE USCITE</li>
+                            <li>SCOPRI</li> 
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="second-section">
+                <div>
+                    <h3>Recently played</h3>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div>
+                            <img src="img/metal_lifting.jpg" alt="heavymetalalbum">
+                        </div>
+                        <div>
+                            <h5>Heavy Metal</h5>
+                            <h6>subtitle</h6>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                        <img src="img/stranger.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Stranger Things, Vol.1( a Netflix Origninal Series Soundtrack)</h5>
+                            <h6>Kyle Dixon & Michael Stein</h6>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <img src="img/aquietplace.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>A quiet place</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <img src="img/split.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Split</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <img src="img/cure.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>A cure for wellness</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <img src="img/sinister.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Sinister</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer></footer>
 </body>
 </html>
