--- a/index.html
+++ b/index.html
@@ -14,52 +14,63 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
+<!-- container vh -->
 <body>
     <div class="flex container-vh">
-        <div class="col col-nav">  
-            <div>
-                <h1><i class="fa-brands fa-spotify"></i>Spotify</h1>
-            </div>
-            <div>
-                <nav>
-                    <ul class="list icon ">
-                        <li><i class="fa-brands fa-spotify"></i><span>Home</span></li>
-                        <li><i class="fa-brands fa-spotify"></i><span>Cerca</span></li>
-                        <li><i class="fa-brands fa-spotify"></i><span>La tua libreria</span></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="playlist">
-                <nav>
-                    <ul>
-                        <h5>Playlist</h5>
-                        <li><i class="fa-brands fa-spotify"></i>Crea Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li> 
-                    </ul>
-                </nav>
-            </div>
-            <div class="bottom-nav">
+<!-- col nav -->
+        <div class="col col-nav flex-column">  
+            <div class="col-navigation">
                 <div>
-                    <p><i class="fa-regular fa-circle-arrow-down"></i><span>Installa app</span></p>
-                    <hr>
-                    <p><i class="fa-duotone fa-circle-user"></i><span>John Doe</span></p>
+                    <h1><i class="fa-brands fa-spotify"></i>Spotify</h1>
                 </div>
-
+<!-- nav icon -->
+                <div>
+                    <nav>
+                        <ul class="list icon ">
+                            <li><i class="fa-brands fa-spotify"></i><span>Home</span></li>
+                            <li><i class="fa-brands fa-spotify"></i><span>Cerca</span></li>
+                            <li><i class="fa-brands fa-spotify"></i><span>La tua libreria</span></li>
+                        </ul>
+                    </nav>
+                </div>
+<!-- list playlist -->
+                <div class="playlist">
+                    <nav>
+                        <ul>
+                            <h5>Playlist</h5>
+                            <li><i class="fa-brands fa-spotify"></i>Crea Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li> 
+                        </ul>
+                    </nav>
+                </div>
             </div>
+<!-- bottom nav -->
+            <div>
+                <div class="bottom-nav">
+                    <div>
+                        <p><i class="fa-regular fa-circle-arrow-down"></i><span>Installa app</span></p>
+                        <hr>
+                        <p><i class="fa-duotone fa-circle-user"></i><span>John Doe</span></p>
+                    </div>
+
+                </div>
+            </div>   
         </div>
+<!-- main col -->
         <div class="col-main">
             <div class="upgrade flex">
                 <div>
                     <button>EFFETTUA L'UPGRADE</button>
                 </div>
             </div>
-            <div class="first-section">
+<!-- first section  -->
+            <section class="first-section">
                 <div>
                     <nav>
                         <ul class="row">
@@ -72,12 +83,15 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-            <div class="second-section">
+            </section>
+<!-- second section -->
+            <section class="second-section">
+<!--  -->
                 <div>
                     <h3>Recently played</h3>
                 </div>
                 <div class="row">
+<!--  -->
                     <div class="col">
                         <div>
                             <img src="img/metal_lifting.jpg" alt="heavymetalalbum">
@@ -87,6 +101,7 @@
                             <h6>subtitle</h6>
                         </div>
                     </div>
+<!--  -->
                     <div class="col">
                         <div>
                         <img src="img/stranger.jpeg" alt="">
@@ -96,6 +111,7 @@
                             <h6>Kyle Dixon & Michael Stein</h6>
                         </div>
                     </div>
+<!--  -->
                     <div class="col">
                         <div>
                             <img src="img/aquietplace.jpeg" alt="">
@@ -105,6 +121,7 @@
                             <h6>Subtitle</h6>
                         </div>
                     </div>
+<!--  -->
                     <div class="col">
                         <div>
                             <img src="img/split.jpeg" alt="">
@@ -114,6 +131,7 @@
                             <h6>Subtitle</h6>
                         </div>
                     </div>
+<!--  -->
                     <div class="col">
                         <div>
                             <img src="img/cure.jpeg" alt="">
@@ -123,6 +141,7 @@
                             <h6>Subtitle</h6>
                         </div>
                     </div>
+<!--  -->
                     <div class="col">
                         <div>
                             <img src="img/sinister.jpeg" alt="">
@@ -133,9 +152,110 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+<!-- tird section -->
+            <section class="tird-section">
+                <div>
+                    <h3>Creato per John Doe</h3>
+                    <h6>Piu' ascolti, piu' accurati saranno i suggerimenti</h6>
+                </div>
+                <div class="row">
+<!--  -->
+                    <div class="col">
+                        <div>
+                            <img src="img/radar.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Release Radar</h5>
+                        </div>
+                    </div>
+<!--  -->
+                    <div class="col">
+                        <div>
+                            <img src="img/mixdaily.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Daily Mix 1</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+<!-- fourth section -->
+            <section class="fourth-section">
+                <div>
+                    <h3>Artisti piu' popolari</h3>
+                    <h6>Piu' ascolti, piu' accurati saranno i suggerimenti</h6>
+                </div>
+                <div class="row">
+<!--  -->
+                    <div class="col">
+                        <div>
+                            <img src="img/youg.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Lana del Rey</h5>
+                        </div>
+                    </div>
+<!--  -->
+                    <div class="col">
+                        <div>
+                            <img src="img/einaudi.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h5>Ludovico Einaudi</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
-    <footer></footer>
+<!-- footer -->
+    <footer>
+        <section class="footer-section">
+            <div class="row">
+<!-- col 25 -->
+                <div class="col flex col-25">
+                   <div class="footer-left flex">
+                        <div>
+                            <img src="img/sinister.jpeg" alt=""> 
+                        </div>
+                        <div>
+                            <h5>Sinister</h5>
+                            <h6>Brano Nome</h6> 
+                        </div>
+                   </div>
+                   <div class="flex">
+                        <div>
+                            <i class="fa-brands fa-spotify"></i>
+                            <i class="fa-brands fa-spotify"></i>
+                        </div> 
+                   </div>
+                </div>
+<!-- col 50 -->
+                <div class="col col-50 row">
+                    <div class="footer-icon flex">
+                        <div>icona</div>
+                        <div>icona</div>
+                        <div>icona</div>
+                        <div>icona</div>
+                        <div>icona</div>
+                    </div>
+                    <div class="song-bar ">
+                        <div>barra brano</div> 
+                    </div>
+                </div>
+<!-- col 25  -->
+                <div class="col col-25">
+                    <div class="footer-right flex-cnt">
+                        <div>i</div>
+                        <div>i</div>
+                        <div>i</div>
+                        <div>icona</div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </footer>
 </body>
 </html>
