--- a/index.html
+++ b/index.html
@@ -21,60 +21,66 @@
         <div class="col col-nav flex-column">  
             <div class="col-navigation">
                 <div>
-                    <h1><i class="fa-brands fa-spotify"></i>Spotify</h1>
+                    <h1><img src="img/logo.svg" alt=""></h1>
                 </div>
 <!-- nav icon -->
                 <div>
                     <nav>
-                        <ul class="list icon ">
-                            <li><i class="fa-brands fa-spotify"></i><span>Home</span></li>
-                            <li><i class="fa-brands fa-spotify"></i><span>Cerca</span></li>
-                            <li><i class="fa-brands fa-spotify"></i><span>La tua libreria</span></li>
+                        <ul class="icon">
+                            <li><img src="img/home.svg" alt=""><span>Home</span><span class="line-nav"></span></li>
+                            <li><img src="img/search.svg" alt=""><span>Cerca</span></li>
+                            <li><img src="img/libreria.svg" alt=""><span>La tua libreria</span></li>
                         </ul>
                     </nav>
                 </div>
 <!-- list playlist -->
                 <div class="playlist">
-                    <nav>
-                        <ul>
-                            <h5>Playlist</h5>
-                            <li><i class="fa-brands fa-spotify"></i>Crea Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li> 
-                        </ul>
-                    </nav>
+                    <div>
+                        <h5>Playlist</h5>
+                        <small><i class="fa-solid fa-circle-plus"></i> Crea Playlist</small>
+                    </div>
+                    <div>
+                        <nav>
+                            <ul class="list-playlist">
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li> 
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
+                         </nav>
+                    </div>
                 </div>
             </div>
 <!-- bottom nav -->
-            <div>
-                <div class="bottom-nav">
-                    <div>
-                        <p><i class="fa-regular fa-circle-arrow-down"></i><span>Installa app</span></p>
-                        <hr>
-                        <p><i class="fa-duotone fa-circle-user"></i><span>John Doe</span></p>
-                    </div>
-
+            <div class="bottom-nav">
+                <div class="icon">
+                    <p><img src="img/download.svg" alt=""><span> Installa app</span></p>
+                    <hr>
+                    <p><img src="img/profile.svg" alt=""><span> John Doe</span></p>
                 </div>
             </div>   
         </div>
 <!-- main col -->
         <div class="col-main">
-            <div class="upgrade flex">
-                <div>
-                    <button>EFFETTUA L'UPGRADE</button>
+            <section>
+                <div class="upgrade flex">
+                    <div>
+                        <button>EFFETTUA L'UPGRADE</button>
+                    </div>
                 </div>
-            </div>
+            </section>
 <!-- first section  -->
             <section class="first-section">
                 <div>
                     <nav>
                         <ul class="row">
-                            <li>IN EVIDENZA</li>
+                            <li class="green">IN EVIDENZA <span class="line"></span></li>
                             <li>PODCAST</li>
                             <li>CLASSIFICHE</li>
                             <li>GENERI E MOOD</li>
@@ -96,7 +102,7 @@
                         <div>
                             <img src="img/metal_lifting.jpg" alt="heavymetalalbum">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Heavy Metal</h5>
                             <h6>subtitle</h6>
                         </div>
@@ -106,7 +112,7 @@
                         <div>
                         <img src="img/stranger.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Stranger Things, Vol.1( a Netflix Origninal Series Soundtrack)</h5>
                             <h6>Kyle Dixon & Michael Stein</h6>
                         </div>
@@ -116,7 +122,7 @@
                         <div>
                             <img src="img/aquietplace.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>A quiet place</h5>
                             <h6>Subtitle</h6>
                         </div>
@@ -126,7 +132,7 @@
                         <div>
                             <img src="img/split.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Split</h5>
                             <h6>Subtitle</h6>
                         </div>
@@ -136,7 +142,7 @@
                         <div>
                             <img src="img/cure.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>A cure for wellness</h5>
                             <h6>Subtitle</h6>
                         </div>
@@ -146,7 +152,7 @@
                         <div>
                             <img src="img/sinister.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Sinister</h5>
                             <h6>Subtitle</h6>
                         </div>
@@ -165,7 +171,7 @@
                         <div>
                             <img src="img/radar.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Release Radar</h5>
                         </div>
                     </div>
@@ -174,7 +180,7 @@
                         <div>
                             <img src="img/mixdaily.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Daily Mix 1</h5>
                         </div>
                     </div>
@@ -192,7 +198,7 @@
                         <div>
                             <img src="img/youg.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Lana del Rey</h5>
                         </div>
                     </div>
@@ -201,7 +207,7 @@
                         <div>
                             <img src="img/einaudi.jpeg" alt="">
                         </div>
-                        <div>
+                        <div class="text-center">
                             <h5>Ludovico Einaudi</h5>
                         </div>
                     </div>
@@ -221,40 +227,41 @@
                         </div>
                         <div>
                             <h5>Sinister</h5>
-                            <h6>Brano Nome</h6> 
+                            <p>Brano Nome</p> 
                         </div>
                    </div>
-                   <div class="flex">
-                        <div>
-                            <i class="fa-brands fa-spotify"></i>
-                            <i class="fa-brands fa-spotify"></i>
-                        </div> 
+                   <div class="row icon ">
+                        <div>  
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-folder"></i>
+                        </div>   
                    </div>
                 </div>
 <!-- col 50 -->
                 <div class="col col-50 row">
                     <div class="footer-icon flex">
-                        <div>icona</div>
-                        <div>icona</div>
-                        <div>icona</div>
-                        <div>icona</div>
-                        <div>icona</div>
+                        <div><i class="fa-solid fa-shuffle"></i></div>
+                        <div><i class="fa-solid fa-backward-step"></i></div>
+                        <div><i class="fa-regular fa-circle-play"></i></div>
+                        <div><i class="fa-solid fa-forward-step"></i></div>
+                        <div><i class="fa-solid fa-rotate-right"></i></div>
                     </div>
-                    <div class="song-bar ">
-                        <div>barra brano</div> 
+                    <div class="song-bar flex ">
+                        <div>0.25</div>
+                        <div class="time-bar"></div>
+                        <div>4.35</div> 
                     </div>
                 </div>
 <!-- col 25  -->
                 <div class="col col-25">
                     <div class="footer-right flex-cnt">
-                        <div>i</div>
-                        <div>i</div>
-                        <div>i</div>
-                        <div>icona</div>
+                        <div><i class="fa-solid fa-list"></i></div>
+                        <div><i class="fa-solid fa-display"></i></div>
+                        <div><i class="fa-solid fa-volume-high"></i></div>
+                        <div class="audio-bar"></div>
                     </div>
                 </div>
             </div>
-
         </section>
     </footer>
 </body>
