--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
                 <div class="row">
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/metal_lifting.jpg" alt="heavymetalalbum">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Heavy Metal</h5>
@@ -110,8 +113,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
-                        <img src="img/stranger.jpeg" alt="">
+                        <div class="col-album">
+                            <img src="img/stranger.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Stranger Things, Vol.1( a Netflix Origninal Series Soundtrack)</h5>
@@ -120,8 +126,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/aquietplace.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>A quiet place</h5>
@@ -130,8 +139,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/split.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Split</h5>
@@ -140,8 +152,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/cure.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>A cure for wellness</h5>
@@ -150,8 +165,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/sinister.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Sinister</h5>
@@ -169,8 +187,11 @@
                 <div class="row">
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/radar.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Release Radar</h5>
@@ -178,8 +199,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/mixdaily.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Daily Mix 1</h5>
@@ -196,8 +220,11 @@
                 <div class="row">
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/youg.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Lana del Rey</h5>
@@ -205,8 +232,11 @@
                     </div>
 <!--  -->
                     <div class="col">
-                        <div>
+                        <div class="col-album">
                             <img src="img/einaudi.jpeg" alt="">
+                            <div class="animation-album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
                         </div>
                         <div class="text-center">
                             <h5>Ludovico Einaudi</h5>
@@ -228,13 +258,13 @@
                         </div>
                         <div>
                             <h5>Sinister</h5>
-                            <p>Brano Nome</p> 
+                            <p  class="color-grey" >Brano Nome</p> 
                         </div>
                    </div>
                    <div class="row icon ">
                         <div>  
-                            <i class="fa-regular fa-heart"></i>
-                            <i class="fa-regular fa-folder"></i>
+                            <i class="color-grey fa-regular fa-heart"></i>
+                            <i class="color-grey fa-regular fa-folder"></i>
                         </div>   
                    </div>
                 </div>
