aggiunta animazione barra volume/musica

--- a/index.html
+++ b/index.html
@@ -38,24 +38,20 @@
                 <div class="playlist display-on">
                     <div>
                         <h5>Playlist</h5>
-                        <small><i class="fa-solid fa-circle-plus"></i> Crea Playlist</small>
+                        <small><i class="fa-sharp fa-solid fa-square-plus"></i> Crea Playlist</small>
                     </div>
-                    <div>
-                        <nav>
-                            <ul class="list-playlist">
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li> 
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                            </ul>
-                         </nav>
-                    </div>
+                    <ul class="list-playlist">
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li> 
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
                 </div>
             </div>
 <!-- bottom nav -->
